...
enum class SettingsPage(
    val title: String,
) {
    MAIN("Settings"),
    LAYOUT("Layout"),
    DOCK("Dock"),
    APPEARANCE("Appearance"),
    ADAPTIVE_STAGE_APPEARANCE("Cards appearance"),
    FLOATING_DOCK("Floating dock"),
    GESTURES("Gestures"),
    CONTEXTUAL("Contextual"),
    MOTION("Motion & haptics"),
    PERMISSIONS("Permissions"),
...
