...
    const val DONE = "Done"
    const val CLOSE = "Close editor"
    const val UNDO = "Undo"
    const val REDO = "Redo"
    const val REVERT = "Revert changes"
    const val NEXT = "Next"
    const val BACK = "Back"
    const val ADD_TO_WORKSPACE = "Add to workspace"
    const val APPLY_CHANGES = "Apply changes"
    const val CANCEL = "Cancel"
    const val DISMISS = "Dismiss"
    const val NOT_NOW = "Not now"
    const val DISCARD_TITLE = "Discard changes?"
...
